# semantica

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  FINAL_PLAN.md  MODULES_DOCUMENTATION.md  Modules.md  PR_DESCRIPTION.md  PR_DESCRIPTION_KG_ENHANCEMENTS.md  PR_DESCRIPTION_NORMALIZE.md  PR_DESCRIPTION_ONTOLOGY.md  README.md  SUPPORT.md  SemantiCore_Development_Roadmap.md  UPDATED_PLAN.md  Update_Readme.md  all_kg_tests_output.txt  all_tests_output.txt  all_tests_output_2.txt  conflicts_test_output.txt  cookbook_test_output.txt  debug_git.py  disease_network_output.txt  git-commands.md  kg_tests_output.txt  mkdocs.yml  netlify.toml  push_and_pr.py  pyproject.toml  pytest.ini  requirements-docs.txt  restructure_utf8.py  run_normalize_tests_v2.py  semantic_extract_output.txt  semantic_extract_output_2.txt  semantic_extract_output_3.txt  setup_docs.py  test-docs.py  test_inference_output.txt  test_inference_output_2.txt  (+13 more)
.claude/: settings.local.json
.github/: FUNDING.yml  SUPPORT.md
.github/workflows/: docs-mkdocs.yml  docs-netlify.yml  docs-vercel.yml  docs.yml  format.yml  security.yml
cookbook/: REAL_DATA_SOURCES.md
cookbook/01_core_workflows/: 03_From_Unstructured_to_Structured.ipynb  04_Multi_Source_Data_Ingestion.ipynb  05_Text_Processing_Pipeline.ipynb  06_Entity_Resolution_Workflow.ipynb  07_Building_Knowledge_Graphs.ipynb  08_Graph_Analytics_Complete.ipynb  09_Temporal_Knowledge_Graphs.ipynb  10_Graph_Quality_Assurance.ipynb  11_Embedding_Generation_Complete.ipynb  12_Vector_Store_Complete.ipynb  13_Semantic_Search_Pipeline.ipynb  14_Embedding_Visualization.ipynb
cookbook/advanced/: 01_Advanced_Extraction.ipynb  02_Advanced_Graph_Analytics.ipynb  03_Complete_Visualization_Suite.ipynb  05_Multi_Format_Export.ipynb  06_Multi_Source_Data_Integration.ipynb  07_Pipeline_Orchestration.ipynb  08_Reasoning_and_Inference.ipynb  09_Semantic_Layer_Construction.ipynb  10_Temporal_Knowledge_Graphs.ipynb  11_Advanced_Context_Engineering.ipynb  12_Unstructured_to_Ontology.ipynb  Advanced_Extraction.ipynb  Advanced_Graph_Analytics.ipynb  Advanced_Vector_Store_and_Search.ipynb  Complete_Visualization_Suite.ipynb  Multi_Format_Export.ipynb  Multi_Source_Data_Integration.ipynb  Semantic_Layer_Construction.ipynb  Temporal_Knowledge_Graphs.ipynb  Unstructured_to_Ontology.ipynb  quantum_ontology.ttl
cookbook/advanced_patterns/: Conflict_Resolution_Strategies.ipynb  Pipeline_Orchestration.ipynb  Reasoning_and_Inference.ipynb  Text_Chunking_Strategies.ipynb
cookbook/examples/: __init__.py
cookbook/introduction/: 01_Welcome_to_Semantica.ipynb  02_Data_Ingestion.ipynb  03_Document_Parsing.ipynb  04_Data_Normalization.ipynb  05_Entity_Extraction.ipynb  06_Relation_Extraction.ipynb  07_Building_Knowledge_Graphs.ipynb  08_Your_First_Knowledge_Graph.ipynb  09_Graph_Store.ipynb  10_Graph_Analytics.ipynb  11_Chunking_and_Splitting.ipynb  12_Embedding_Generation.ipynb  13_Vector_Store.ipynb  14_Ontology.ipynb  15_Export.ipynb  16_Visualization.ipynb  17_Conflict_Detection_and_Resolution.ipynb  18_Deduplication.ipynb  19_Context_Module.ipynb  20_Triplet_Store.ipynb  Building_Knowledge_Graphs.ipynb  Configuration_Basics.ipynb  Conflict_Detection.ipynb  Data_Ingestion.ipynb  Data_Normalization.ipynb  Deduplication.ipynb  Document_Parsing.ipynb  Embedding_Generation.ipynb  Entity_Extraction.ipynb  Export.ipynb  Graph_Analytics.ipynb  Graph_Quality.ipynb  Ontology.ipynb  Relation_Extraction.ipynb  Vector_Store.ipynb  Visualization.ipynb  Welcome_to_Semantica.ipynb  Your_First_Knowledge_Graph.ipynb  config.yaml  knowledge_graph.json
cookbook/notebooks/: __init__.py  experiment_custom_parsers.ipynb  experiment_reasoning.ipynb  tutorial_01_getting_started.ipynb  tutorial_02_data_ingestion.ipynb  tutorial_03_semantic_extraction.ipynb  tutorial_04_knowledge_graphs.ipynb  tutorial_05_embeddings.ipynb  tutorial_06_advanced_pipelines.ipynb
cookbook/specialized_applications/: Fraud_Detection_Anomaly_Complete.ipynb  GraphRAG_Complete.ipynb  Hybrid_RAG_Temporal_KG.ipynb  Multi_Agent_System_KG_Powered.ipynb  Supply_Chain_End_to_End.ipynb
cookbook/use_cases/: __init__.py
docs/: CodeExamples.md  LIBS_README.md  TESTING.md  api.md  architecture.md  citation.md  community-projects.md  concepts.md  cookbook.md  deep-dive.md  examples.md  faq.md  getting-started.md  glossary.md  index.md  installation.md  learning-more.md  license.md  modules.md  netlify.toml  quickstart.md  use-cases.md  vercel.json
docs/css/: custom.css
docs/js/: version-selector.js
docs/reference/: change_management.md  conflicts.md  context.md  core.md  deduplication.md  embeddings.md  evals.md  export.md  graph_store.md  ingest.md  kg.md  llms.md  normalize.md  ontology.md  parse.md  pipeline.md  reasoning.md  seed.md  semantic_extract.md  split.md  triple_store.md  triplet_store.md  utils.md  vector_store.md  visualization.md
examples/: huggingface_demo.py
libs/: README.md
scripts/: verify_conflict_complete.py  verify_conflict_resolution.py  verify_deduplication_notebook.py
semantica/: __init__.py
semantica/change_management/: __init__.py  change_log.py  change_management_usage.md  managers.py  ontology_version_manager.py  version_storage.py
semantica/conflicts/: __init__.py  conflict_analyzer.py  conflict_detector.py  conflict_resolver.py  conflicts_usage.md  investigation_guide.py  source_tracker.py
semantica/context/: __init__.py  agent_context.py  agent_memory.py  context_graph.py  context_retriever.py  context_usage.md  entity_linker.py  methods.py
semantica/core/: __init__.py  config_manager.py  core_usage.md  lifecycle.py  (+1 more)
tests/: test_all_features.py  test_export_module.py  test_extractors_dispatch.py  test_hf_deep_verify.py  test_huggingface_impl.py  test_notebook_15_export.py  test_notebooks_plain.py  test_notebooks_repro.py  test_notebooks_simulation.py  test_notebooks_verification.py  test_pipeline_orchestration.py  test_seed_manager.py  test_semantic_extract_deepdive.py  test_semantic_extract_deepdive_part2.py  test_semantic_extract_triplets.py  verify_backends.py  verify_context_sync.py
(+489 files in other folders)
